<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rp_ultrasonic_sensor</name>
  <version>0.1.0</version>
  <description>This is a ultrasonic sensor package for data parsing from Arduino to Raspi</description>
  <maintainer email="jovan.josafat@gmail.com">Jovan Josafat</maintainer>
  <license>TODO: License declaration</license>
  
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
